--- a/style.css
+++ b/style.css
@@ -35,3 +35,19 @@
     border-radius: 3px;
     vertical-align: middle;  
 }
+
+.ms_btn {
+    background-color: #1abc9c;
+    border: 1px solid white;
+}
+
+.ms_circle {
+    padding: 7px 12px;
+    border: 1px solid white;
+    border-radius: 50%;
+    margin: 5px;
+}
+
+.ms_text_green {
+    color: #1abc9c;
+}
